<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:paddingLeft="32dp"
    android:paddingTop="32dp"
    android:paddingRight="32dp"
    android:paddingBottom="32dp"
    android:background="@android:color/transparent"
    tools:context=".screens.RequestActivity">

    <LinearLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tblProgress"
        android:background="@drawable/shapes"
        android:layout_width="560dp"
        android:layout_height="560dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="100dip">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/label_item_amount"
                android:text="@string/itemamount"
                android:layout_height="wrap_content"
                android:layout_width="100dp"/>

            <EditText
                android:id="@+id/input_item_amount"
                android:text="99.99"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="100dp"
                android:id="@+id/label_tip_amount"
                android:text="@string/tipamount" />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/input_tip_amount"
                android:text="1.50"
                android:inputType="numberDecimal"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="100dp"
                android:id="@+id/label_product_code"
                android:text="@string/product_code" />

<!--            android:hint="SampleProductCode"-->
<!--            DMGTC44856-->
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/input_product_code"
                android:text="TestProduct"
                android:inputType="text"
                 />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/btnPurchase"
                android:layout_weight="1"
                android:text="Purchase"
                android:textAllCaps="false"
                style="@style/Button.Primary"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/btnRefund"
                android:layout_weight="1"
                android:text="Refund"
                android:textAllCaps="false"
                style="@style/Button.Secondary"
                android:layout_marginTop="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/btnLogin"
                android:layout_weight="1"
                android:text="Login"
                android:textAllCaps="false"
                style="@style/Button.Secondary"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Cancel"
                android:textAllCaps="false"
                android:layout_marginTop="15dp"
                style="@style/Button.Secondary"/>


        </LinearLayout>
    </LinearLayout>

</FrameLayout>